@@ -47,6 +47,9 @@ Bindings:
 * .net
 * java
 
+20121104
+* pylnk: fixes for 32-bit build
+
 20121103
 * pylnk: bug fixes
 * updated dependencies
